# SimpleGl

./: .gitattributes  CMakeLists.txt  LICENSE.txt  OpenGlRenderer.cpp  README.md  default.vert.glsl  invert.frag.glsl  main.cpp
include/GLFW/: left.txt
